Fix header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     color: white;
     font-weight: 800;
     font-size: 24px;
-    margin-top: 8px;
+    padding: 16px 180px 0 180px;
 }
 
 a {
